Added battery assembly pics, Fixed wrong sleep shortcut instructions

--- a/src/pug/alpakka/manual/diy_assembly.pug
+++ b/src/pug/alpakka/manual/diy_assembly.pug
@@ -167,6 +167,7 @@ block content
     li Press until the cover snaps in (be careful not to pinch the battery edges).
   img.hm.mt.mr(src='/static/manual/assembly_battery_a.jpg')
   img.hm.mt.mr(src='/static/manual/assembly_battery_b.jpg')
+  img.hm.mt.mr(src='/static/manual/assembly_battery_c.jpg')
   img.hm.mt.mr(src='/static/manual/assembly_cover_a.jpg')
   img.hm.mt.mr(src='/static/manual/assembly_cover_b.jpg')
   hr
