--- a/src/pug/alpakka/manual/wireless.pug
+++ b/src/pug/alpakka/manual/wireless.pug
@@ -41,9 +41,9 @@ block content
 
   hr
   h3 Turn off controller
-  p The controller can be turned off (sleep mode) by holding #[em Home #[+home]]+#[em Start #[+select]] for 2 seconds.
+  p The controller can be turned off (sleep mode) by holding #[em Home #[+home]] for #[em 5 seconds] (while not pressing any other button, moving any thumbstick, nor touching the touch surface).
   p The controller is awaken by pressing #[em Home #[+home]].
-  p While the controller is off, all the LEDs are off, and the battery is drained at a much lower rate.
+  p While the controller is sleeping, all the LEDs are off, and the battery is drained at a much lower rate.
 
   hr
   h3 Force restart
