--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -10,6 +10,12 @@ block content
   hr
 
   ul
+    li #[+ax('https://www.youtube.com/watch?v=RJ0Ogjo8ZdQ') Kroopniock] #[em (video)] How good is this 3D printed game controller?
+    ul
+      li: i "[This - the gyros -] makes this controller super useful for any type of shooter."
+      li: i "X-box [controller] was always the only one I used."
+      li: i "I like how customizable it is."
+
     li #[+ax('https://www.youtube.com/watch?v=9tP6crSIfS8') NoMisZx] #[em (video)] The Finals | Powershift Alpakka Gyro Gameplay (No Aim Assist)
 
     li #[+ax('https://www.youtube.com/watch?v=WEJ_AO--MCI') IPlayController] #[em (video)] World's Most Accurate Controller: Alpakka v1.0 Review
