minor clarification of principles; we are now a startup

--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -16,7 +16,7 @@ block page
     div.box
       h2 Our principles and goals
       p We embrace #[em open source], backward compatibility, right to repair, and privacy. We are disgusted by FOMO, predatory sales, and people imposing their preferences.
-      p We are #[em not a startup], our goal is not to grow artificially, but to create a stable environment for research and development.
+      p We may #[em not be your typical startup], as our goal is not to grow artificially, but to create a stable environment for research and development.
       p We #[em welcome and support] everyone in our community, we do not leave anyone behind.
 
     div.box
