--- a/src/pug/contribute/open_source.pug
+++ b/src/pug/contribute/open_source.pug
@@ -1,14 +1,15 @@
 extends ../_template.pug
 
 block title
-  | Contribute to Input Labs
+  | Open source
 
 block page
-  include _title.pug
+  //- include _title.pug
+  h1 Open source
 
   div.boxes.grid
     div.box
-      h2 Open source
+      h2 Sources and schematics
       p #[em Explore, modify, and re-share!] This is all about our open source projects, so feel free to play with them, propose features, report bugs, and submit pull requests with improvements.
       p Browse our #[+ax(org.repos) GitHub Repositories] for the source code and hardware designs.
 
