--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -57,7 +57,6 @@ html
     footer
       div Input Labs Oy.
       div: a(role="button" data-toggleanimations="data-toggleanimations") Toggle animations
-      div: +a('/about') About
-      div: +a('/press') Press
+      div: +a('/legal/privacy') Privacy
       div: +ax('https://github.com/inputlabs/website/blob/main/license.md') CC BY-NC-SA
       //- div #{new Date().getFullYear()}
