--- a/src/pug/legal/_policies.pug
+++ b/src/pug/legal/_policies.pug
@@ -2,16 +2,16 @@ extends ../_template.pug
 
 block title
   block subtitle
-    | Policies
+    | Legal
     |
 
 block page
-  h1 Policies
+  h1 Legal
 
   div.boxes.wiki
     div
       div.box.index
-        h2 Policies
+        h2 Legal
         +wikilink('privacy') Privacy policy
 
     div.box.entry
