--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -11,7 +11,6 @@ block page
       h2 Who are we?
       p #[em Input Labs Oy.] (OsakeYhtiö) is a small company established in Finland, Europe.
       p Founded in 2022 by 2 friends, both engineers and gamers: Marcos (born in Spain) and Michael (born in Germany). Later several friends joined as testers, idea givers and contributors. And now we are waiting for you.
-      p You can talk with us on #[+ax(org.discord) Discord] anytime.
 
     div.box
       h2 Our principles and goals
@@ -51,15 +50,16 @@ block page
 
     div.box
       h2 Patents
-      p We explained about our #[em approach to patents] in the blog post #[+a('/blog/patents') Patents, a necessary evil].
-      p: b Multiple angular rate sensors:
+      p We explained about our #[em approach to patents] in the blog post #[+a('/blog/patents') Patents, a necessary evil]. These are our granted/pending patents:
+      p: b Multiple angular rate sensors
       ul(style='margin-top:0px')
         li: +ax('https://patents.google.com/patent/US20240337994A1') US-20240337994-A1
         li: +ax('https://patents.google.com/patent/FI20237064A1') FI-20237064-A1
-      p: b Touch sensor integrated with depressible buttons:
+      p: b Touch sensor integrated with depressible buttons
       ul(style='margin-top:0px')
         li: +ax('https://patents.google.com/patent/US12248639B1') US-12248639-B1
 
     div.box
       h2 Get in contact
       p For support or generic inquiries, send us a mail to #[span.lima #[span.lima1]] #[i (Cannot be copied)]
+      p Or you can find us on #[+ax(org.discord) Discord] anytime.
