Alpakka 2 page, Future developments blog entry

--- a/src/pug/_header.pug
+++ b/src/pug/_header.pug
@@ -9,10 +9,10 @@ mixin nav
     }
   div.tab
     div.title Devices
-    div.link(class=active('alpakka')): +a('/alpakka') Alpakka
+    div.link(class=active('alpakka')): +a('/alpakka') Alpakka 1
+    div.link(class=active('alpakka_2')): +a('/alpakka_2') Alpakka 2
     div.link(class=active('kapybara')): +a('/kapybara') Kapybara
     div.link(class=active('marmota')): +a('/marmota') Marmota
-    div.link(class=active('')): +a('/') &nbsp;
   div.tab
     div.title Community
     div.link(class=active('open_source')): +a('/contribute/open_source') Open Source
