--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -25,6 +25,7 @@ block page
 
         h3 News
         div
+          +wikilink('future_developments') Future developments
           +wikilink('report_30') Progress report 30
           +wikilink('report_29') Progress report 29
           +wikilink('kapybara_development') Kapybara development
