--- a/src/pug/blog/report_30.pug
+++ b/src/pug/blog/report_30.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #30
-  +news_header('21 July 2025', 'report_29', '')
+  +news_header('21 July 2025', 'report_29', 'future_developments')
 
   h3 New Input Labs staff member
   p #[+ax('https://www.linkedin.com/in/maria-bortnichenko-a8345044/') Maria Bortnichenko] joined Input Labs for a temporary assignment as #[em Strategy & Business developer], over the next few months she will help us analyzing the market, and how our devices align with it.
