--- a/src/pug/contribute/gallery_community.pug
+++ b/src/pug/contribute/gallery_community.pug
@@ -4,7 +4,8 @@ block title
   | community Alpakka from the community
 
 block page
-  include _title.pug
+  //- include _title.pug
+  h1 Community gallery
 
   mixin boximg(src)
     div.box.image
