--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -33,7 +33,7 @@
     contribute:    '/contribute/open_source',
     devices:       '/alpakka',
     alpakkaManual: '/alpakka/manual/mouse',
-    blog:          '/blog/report_30',
+    blog:          '/blog/future_developments',
   }
 
   const loadMathJax = [
