--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -6,7 +6,7 @@ block title
     |
 
 block page
-  include ../../_device_selector.pug
+  include ../../_selector.pug
 
   mixin home
     img(src='/static/manual/button_home.svg' height='14px')
