--- a/src/pug/kapybara.pug
+++ b/src/pug/kapybara.pug
@@ -4,7 +4,7 @@ block title
   | Kapybara controller
 
 block page
-  include _device_selector.pug
+  include _selector.pug
 
   div.boxes.grid
     div.box
