--- a/src/pug/marmota.pug
+++ b/src/pug/marmota.pug
@@ -4,7 +4,7 @@ block title
   | Marmota core
 
 block page
-  include _device_selector.pug
+  include _selector.pug
 
   //- div.warning.boxes
   //-   div: span MARMOTA REFERENCE DESIGN IS NOT YET FINAL
