--- a/src/pug/alpakka/components.pug
+++ b/src/pug/alpakka/components.pug
@@ -4,7 +4,7 @@ block title
   | Alpakka components
 
 block page
-  include ../_device_selector.pug
+  include ../_selector.pug
 
   div.boxes.grid
 
