--- a/src/pug/alpakka/gallery.pug
+++ b/src/pug/alpakka/gallery.pug
@@ -4,7 +4,7 @@ block title
   | Alpakka images and videos
 
 block page
-  include ../_device_selector.pug
+  include ../_selector.pug
 
   mixin boximg(src)
     div.box.image
