--- a/src/static/style.css
+++ b/src/static/style.css
@@ -194,9 +194,9 @@ h1.dynamic {
   font-size: 24px;
 }
 h1.primary {
-  margin-top: 15px;
-  margin-bottom: 10px;
-  font-size: 28px;
+  margin-bottom: 0px;
+  /* margin-top: 15px; */
+  /* font-size: 28px; */
 }
 h1.secondary {
   margin-top: 0px;
