Missing colon, force css bump

--- a/src/pug/alpakka_2/specs.pug
+++ b/src/pug/alpakka_2/specs.pug
@@ -34,7 +34,7 @@ block page
         li Wireless dongle with 2.4 GHz protocol (~2 ms latency).
         li OLED 128x64 display for profile preview and config.
         li USB-C connector.
-        li Multi-protocol output.
+        li Multi-protocol output:
           ul
             li HID mouse.
             li HID keyboard.
