--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -10,6 +10,13 @@ block content
   hr
 
   ul
+    li #[+ax('https://www.youtube.com/watch?v=RJ0Ogjo8ZdQ') FPS Gyro] #[em (video)] ALPAKKA 1.0 Gameplay test / ARC Raiders
+    li #[+ax('https://www.youtube.com/watch?v=_txUg6774N4') FPS Gyro] #[em (video)] ALPAKKA 1.0 GYRO CONTROLLER / FIRST IMPRESSIONS / FIRST MODS
+    ul
+      li: i "I can tell you from the get-go that this is very precise."
+      li: i "I don't know if it's a revolution, as someone claimed, but this one definitely allows me to shoot really, really good."
+      li: i "I was winning more games than with the Dual Sense."
+
     li #[+ax('https://www.youtube.com/watch?v=RJ0Ogjo8ZdQ') Kroopniock] #[em (video)] How good is this 3D printed game controller?
     ul
       li: i "[This - the gyros -] makes this controller super useful for any type of shooter."
