Added alpakka 2 banner

--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -48,6 +48,10 @@ html
       )
 
   body
+    div.banner
+      a(href='https://www.indiegogo.com/en/projects/input-labs/alpakka-2' target='_blank')
+        img.banner(src='/static/img/alpakka_2_banner.png')
+
     header
       include _header.pug
 
